Updated image and debate request form

--- a/src/DebateProfile/DebateProfile.module.css
+++ b/src/DebateProfile/DebateProfile.module.css
@@ -63,3 +63,9 @@ hr.solid {
 .participantSection {
     display:block;
 }
+
+.participantImg{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+}
